--- a/package.json
+++ b/package.json
@@ -4,18 +4,22 @@
   "description": "Afficheur dynamique pour espaces publics",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon server"
+    "server": "node server",
+    "serverDev": "nodemon server"
   },
   "author": "@HoPolloTV",
   "license": "MIT",
   "dependencies": {
     "compression": "^1.7.4",
     "dotenv": "^8.1.0",
+    "ejs": "^2.7.1",
     "events": "^3.0.0",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "fs": "0.0.1-security",
     "helmet": "^3.21.1",
     "mongodb": "^3.3.2",
+    "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
     "node-watch": "^0.6.3",
     "nodemon": "^1.19.2",
