--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "@HoPolloTV",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.1.0",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
