--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "server": "node server",
-    "serverDev": "nodemon server"
+    "serverDev": "nodemon server",
+    "client": "electron ."
   },
   "author": "@HoPolloTV",
   "license": "MIT",
@@ -16,9 +17,10 @@
     "fs": "0.0.1-security",
     "mongodb": "^3.3.2",
     "multer": "^1.4.2",
-    "node-fetch": "^2.6.0",
     "node-watch": "^0.6.3",
-    "nodemon": "^1.19.2",
     "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
